<resources>
    <string name="app_name">About Me</string>

    <string name="myName">Graciele Ludwig</string>
    <string name="aboutMeTextView">Hello, welcome to my personal app,
        I am an enthusiastic student living in Ireland since October 2018 when I left behind my
        lovely family in Brazil to strive for new opportunities and personal growth in Ireland.
        Here I am living with a marvelous and kind irish family which I love and care so much.
        I consider myself blessed, despite difficulties I am always surrounded
        by people who helped me and motivate me to keep working hard to follow my dreams. This is my first
        mobile application, hope you enjoy know a little bit more about myself!</string>


    <!--  ACTIVITY EDUCATION   -->
    <string name="EducationTitle">EDUCATION</string>
    <string name="myEducation">In Brazil I finished a Bachelor of International Business at
        UCS - Universidade de Caxias do Sul - RS, and now I am studying Bachelor of Science in Computing at
        Dorset College - Dublin,  since 2020. My native language was German till I went to school in Brazil
        and learned portuguese, and the last few years I am practicing some English</string>
    <string name="returnButtonEducation">HOME</string>
    <string name="nextButtonEducation">NEXT</string>

    <!--  ACTIVITY SKILLS   -->
    <string name="SkillsTitle">SKILLS</string>
    <string name="mySkills">Some of my skills are: Critical thinking, Communication, Creativity,
        Flexibility,Teamwork, Professional Ethics, Responsibility and now learning a lot of new skills
        in science in computing.</string>
    <string name="returnButtonSkills">HOME</string>
    <string name="nextButtonSkills">NEXT</string>

    <!--  ACTIVITY HOBBIES   -->
    <string name="HobbiesTitle">HOBBIES</string>
    <string name="myHobbies">In my free time, I want to stay as far as I can from my pc.
        For relaxing and stretching I like practise Yoga,sometimes watch series on Netflix, painting,
        dance, listen to music, hiking and cycling.To be honest, sometimes feels like the day should
        have thirty hours for we be able to do everything and still have some free time for our hobbies.</string>
    <string name="returnButtonHobbies">HOME</string>
    <string name="nextButtonHobbies">NEXT</string>

    <!--  ACTIVITY ACHIEVEMENTS   -->
    <string name="AchievementsTitle">ACHIEVEMENTS</string>
    <string name="myAchievements">The first of my family to leave Brazil and traveling around Europe.
        After finishing a degree in International Trade in Brazil, I decided to start a second degree in Europe.
        When you live far away from your home town,
        anything you conquer looks a big achievement, you have to get a job to pay for your studies,
        a place for live with dignity, manage time to socialize and increase your network of friends.</string>
    <string name="returnButtonAchievements">HOME</string>
    <string name="exitButtonAchievements">EXIT</string>

    <!--   EXIT APP   -->
    <string name="ExitApp">EXIT</string>

    <!--   COPY RIGHTS   -->
    <string name="copy_rightText">© Copyright Graciele Maria Ludwig 2022</string>
    <string name="buildWith">Built with Android Studio</string>

    <!--   EMAIL TOAST   -->
    <string name="my_email">gracieleludwig@yahoo.com.br</string>




</resources>