<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/educView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/education_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="15dp">

        <TextView
            android:id="@+id/Education"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/EducationTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/my_Education"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/myEducation"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginEnd="2dp">

        <Button
            android:id="@+id/returnButtonEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/returnButtonEducation" />

        <Button
            android:id="@+id/nextButtonEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/nextButtonEducation" />

    </LinearLayout>

    <TextView
        android:id="@+id/copy_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/copy_rightText">

    </TextView>

    <TextView
        android:id="@+id/androidStudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/buildWith">

    </TextView>


</LinearLayout>