<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@color/white"
    android:layout_margin="5dp">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mePic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/CircularShape"
                app:srcCompat="@drawable/me_circular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/myName"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="cursive"
                    android:padding="15dp"
                    android:text="@string/myName"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutMeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif"
                    android:padding="5dp"
                    android:text="@string/aboutMeTextView"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20sp">

                <Button
                    android:id="@+id/educationButton"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/EducationTitle" />

                <Button
                    android:id="@+id/skillsButton"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/SkillsTitle" />

                <Button
                    android:id="@+id/hobbiesButton"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/HobbiesTitle" />

                <Button
                    android:id="@+id/achievementsButton"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/AchievementsTitle" />

                 <ImageView
                     android:id="@+id/exitHomeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:backgroundTint="#ffc4c4c4"
                     app:srcCompat="@drawable/icon_shutdown"
                     app:shapeAppearanceOverlay="@style/CircularShape" />


            </LinearLayout>

            <TextView
                android:id="@+id/copy_rights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/copy_rightText">

            </TextView>

            <TextView
                android:id="@+id/androidStudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/buildWith">

            </TextView>



        </LinearLayout>

    </ScrollView>

</LinearLayout>